k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: targeting-service
  labels:
    name: targeting-service
